--- a/src/kcm/package/metadata.desktop
+++ b/src/kcm/package/metadata.desktop
@@ -47,39 +47,40 @@ Name[uk]=Bluetooth
 Name[x-test]=xxBluetoothxx
 Name[zh_CN]=蓝牙
 Name[zh_TW]=藍牙
-Comment=Manage bluetooth devices
+Comment=Manage Bluetooth devices
+Comment[ast]=Xestiona preseos Bluetooth
+Comment[az]=Bluetooth Cihazlarının İdarə edilməsi
 Comment[ca]=Gestiona els dispositius Bluetooth
-Comment[da]=Håndtér bluetooth-enheder
+Comment[cs]=Spravovat zařízení Bluetooth
 Comment[de]=Bluetooth-Geräte verwalten
 Comment[el]=Διαχείριση συσκευών Bluetooth
 Comment[en_GB]=Manage Bluetooth devices
 Comment[es]=Gestión de dispositivos Bluetooth
 Comment[et]=Bluetoothi seadmete haldamine
-Comment[eu]=Kudeatu bluetooth gailuak
+Comment[eu]=Kudeatu Bluetooth gailuak
 Comment[fi]=Hallitse Bluetooth-laitteita
-Comment[fr]=Gère les périphériques Bluetooth
+Comment[fr]=Gérer les périphériques « Bluetooth »
+Comment[hu]=Bluetooth eszközök kezelése
 Comment[ia]=Gere dispositivos bluetooth
-Comment[id]=Kelola perangkat bluetooth
 Comment[it]=Gestisci i dispositivi Bluetooth
 Comment[ko]=블루투스 장치 관리
+Comment[lt]=Tvarkyti Bluetooth įrenginius
 Comment[nl]=Bluetooth-apparaten beheren
 Comment[nn]=Handsam Bluetooth-einingar
+Comment[pa]=ਬਲੂਟੁੱਥ ਡਿਵਾਈਸ ਦਾ ਇੰਤਜ਼ਾਮ
 Comment[pl]=Zarządzanie urządzeniami Bluetooth
 Comment[pt]=Gerir os dispositivos Bluetooth
 Comment[pt_BR]=Gerenciar dispositivos Bluetooth
 Comment[ro]=Gestionează dispozitive Bluetooth
 Comment[ru]=Управление устройствами Bluetooth
-Comment[sk]=Spravovať zariadenia Bluetooth
-Comment[sl]=Upravljaj naprave Bluetooth
+Comment[sl]=Upravljaj z napravami Bluetooth
 Comment[sv]=Hantera Blåtandsenheter
 Comment[uk]=Керування пристроями Bluetooth
-Comment[x-test]=xxManage bluetooth devicesxx
+Comment[x-test]=xxManage Bluetooth devicesxx
 Comment[zh_CN]=管理蓝牙设备
-Comment[zh_TW]=管理藍牙裝置
 Encoding=UTF-8
 Type=Service
 Icon=preferences-system-bluetooth
-Exec=kcmshell5 bluetooth
 X-KDE-ServiceTypes=KCModule
 X-KDE-Library=kcm_bluetooth
 X-KDE-PluginInfo-Author=Nicolas Fella
@@ -88,7 +89,6 @@ X-KDE-PluginInfo-Name=kcm_bluetooth
 X-KDE-PluginInfo-Version=1.0
 X-KDE-PluginInfo-Website=http://kde.org
 X-KDE-PluginInfo-Category=
-X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=GPL
 X-KDE-PluginInfo-EnabledByDefault=true
 X-KDE-FormFactors=handset,tablet,mediacenter,desktop
